--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
     "mongoose-unique-validator": "^4.0.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.32.6"
   }
 }
